<resources>
    <string name="app_name">ChaconAlvarezBorja2Eca</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="contraseña">Password</string>
    <string name="login1">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="registar_usuario">Registar Usuario</string>
    <string name="Nombre">Escriba su nombre</string>
    <string name="Direccion"> Escriba su Direccion de casa</string>
    <string name="Email">Escriba su email</string>
    <string name="Movil">Escriba su número de móvil</string>
    <string name="nombre">Nombre :</string>
    <string name="Guardar">Guardar Contacto :</string>
    <string name="Volver">Volver Atras :</string>
    <string name="mis_contactos">Mis Contactos</string>
    <string name="borrar_contacto">Borrar Contacto</string>
    <string name="introduce_un_numero">Introduce un Numero</string>
    <string name="borrarContacto">Borrar Contacto</string>
    <string name="agregar_contacto">Agregar Contacto</string>
    <string name="mostrar_contancto">Mostrar Contacto</string>
    <string name="modificar_contacto">Modificar Contacto</string>
    <string name="menu_agenda">Menu Agenda</string>
    <string name="todo">TODO</string>
    <string name="introduce_el_nuevo_numero">Introduce el nuevo nombre</string>
    <string name="textview">TextView</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="introduce_el_numero_que_desea_borrar">Introduce el numero que desea borrar</string>
    <string name="telefono">Telefono</string>
    <string name="introduce_el_nombre_nuevo">Introduce el nombre nuevo</string>
    <string name="introduce_la_nueva_direccion">Introduce la nueva direccion</string>
    <string name="introduce_la_direccion_nueva">Introduce la direccion Nueva</string>
    <string name="introduce_el_nuevo_correo">Introduce el nuevo Correo</string>
    <string name="introduce_el_email_nuevo">Introduce el email Nuevo</string>
    <string name="introduce_tu_alias">introduce tu alias</string>
    <string name="alias">Alias</string>
    <string name="movil">Movil :</string>
    <string name="direccion">Direccion :</string>
    <string name="email">Email :</string>
    <string name="nota">Nota</string>
    <string name="vernota">VerNota</string>
    <string name="g">Introduzca la nota</string>
    <string name="title_activity_notas">Notas</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="guardar_nota">Guardar Nota</string>
    <string name="ver_nota">Ver Nota</string>
    <string name="titulo_nota">Titulo Nota</string>
    <string name="texttitulo">textTitulo</string>
    <string name="contenido_nota">Contenido Nota</string>
    <string name="escriba_el_contenido">Escriba el contenido</string>

</resources>