<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nota">

    <Button
        android:id="@+id/Guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginBottom="12dp"
        android:text="@string/guardar_nota"
        app:layout_constraintBottom_toTopOf="@+id/VerNota"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/VerNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginBottom="68dp"
        android:text="@string/ver_nota"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="16dp"
        android:text="@string/titulo_nota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView5"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="28dp"
        android:hint="@string/texttitulo"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/ContentidoN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="36dp"
        android:text="@string/contenido_nota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/Contenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="60dp"
        android:hint="@string/escriba_el_contenido"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ContentidoN" />

    <ListView
        android:id="@+id/listaConte"
        android:layout_width="399dp"
        android:layout_height="180dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Contenido" />

</androidx.constraintlayout.widget.ConstraintLayout>