<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="278dp"
        android:layout_height="32dp"
        android:layout_marginStart="177dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="178dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textUsername"
        android:layout_width="307dp"
        android:layout_height="48dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="177dp"
        android:layout_marginEnd="43dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogin" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="307dp"
        android:layout_height="48dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="43dp"
        android:autofillHints=""
        android:hint="@string/contraseña"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsername" />

    <Button
        android:id="@+id/incioButton"
        android:layout_width="247dp"
        android:layout_height="51dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="78dp"
        android:text="@string/login1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword" />

    <Button
        android:id="@+id/registroButton"
        android:layout_width="247dp"
        android:layout_height="51dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="78dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incioButton" />
</androidx.constraintlayout.widget.ConstraintLayout>