<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgendaBorrar">

    <TextView
        android:id="@+id/Borrar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="181dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="173dp"
        android:fontFamily="monospace"
        android:text="@string/borrar_contacto"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/guideline39"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/introduce_el_numero_que_desea_borrar"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/guideline41"
        app:layout_constraintEnd_toStartOf="@+id/guideline45"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        app:layout_constraintTop_toTopOf="@+id/guideline49" />

    <ImageButton
        android:id="@+id/BorrarCon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/borrarContacto"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/guideline53"
        app:layout_constraintEnd_toStartOf="@+id/guideline54"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        app:layout_constraintTop_toTopOf="@+id/guideline52"
        app:srcCompat="@drawable/descarga"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/volverAtras"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/Volver"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/guideline53"
        app:layout_constraintEnd_toStartOf="@+id/guideline45"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="@+id/guideline52"
        app:srcCompat="@drawable/atras" />

    <EditText
        android:id="@+id/textTelefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Movil"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline50"
        app:layout_constraintEnd_toStartOf="@+id/guideline45"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        app:layout_constraintTop_toTopOf="@+id/guideline51" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="41dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="136dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="64dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="352dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="99dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="209dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="155dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="319dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="416dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="169dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="255dp" />
</androidx.constraintlayout.widget.ConstraintLayout>